feat: adding swagger docs to update and delete users
